--- a/css/style.css
+++ b/css/style.css
@@ -155,6 +155,8 @@ img {
   border-radius: 0.6em;
   box-shadow: 0 0 10px#888;
   min-width: 10em;
+  margin-bottom: 1em;
+  margin-top: 1em;
 }
 
 h1 {
@@ -168,7 +170,7 @@ p {
 }
 
 .Cont {
-  font-size: 6em;
+  font-size: 3.5em;
 }
 
 .call {
